# Silent-Killer-AI-Agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FRESH_DASHBOARD_SUMMARY.md  FRONTEND_ENHANCEMENTS.md  PERFECT_DASHBOARD_FIXES.md  README.md  docker-compose.yml  install.ps1  install.sh  nginx.conf  pyproject.toml  render.yaml  run.sh  test_ambient.json
.github/workflows/: ci.yml
agent/: README.md  desktop_agent.py  main.py  requirements.txt  tui.py
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py  models.py  os_metrics_agent.py  simulator.py  system_metrics.py
backend/app/agent/: __init__.py  langchain_agent.py
backend/app/ambient/: mock_agent.py  silent_agent.py
backend/app/api/: __init__.py  actions.py  admin.py  agent.py  ambient.py  (+2 more)
backend/docs/: SILENT_KILLER_mvp_flow.ipynb  assistant_startup.md  chat_history_2026-01-03.md  mermaid_architecture.mmd  silent_killer_arch.mermaid  svg_to_png.py
backend/scripts/: debug_auth_ingest.py  debug_auth_ingest2.py  debug_ingest.py  smoke_simulator.py
developement-docs/: CLEAN_DASHBOARD_FIXES.md  CYBERPUNK_ENHANCEMENTS.md  DASHBOARD_FIXES.md  DASHBOARD_PERFORMANCE_FIXES.md  DEPLOYMENT.md  NOTIFICATION_AND_ANIMATION_FIXES.md
docs/: AI_AGENT_ARCHITECTURE.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: debug_ranker.py  print_chat_history.py
tests/: conftest.py  test_actions.py  test_api.py  test_auth.py  test_executor.py  test_learning.py  test_ml_models.py  test_normalizer.py  test_privacy.py  test_ranker.py  test_rules.py  test_sql_store.py
(+32 files in other folders)
