[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silent-killer-agent"
version = "1.0.0"
description = "Ambient Intelligence CLI/TUI for SILENT KILLER productivity monitoring"
authors = [{name = "SILENT KILLER Team", email = "support@silent-killer.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "click>=8.0.0",
  "rich>=13.0.0",
  "textual>=0.41.0",
  "requests>=2.28.0",
  "psutil>=5.9.0",
  "pynput>=1.7.6",
  "watchdog>=3.0.0",
  "pyautogui>=0.9.54",
  "pillow>=9.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black",
  "ruff",
  "build",
  "twine",
]

[project.scripts]
silent-killer = "agent.main:cli"

[project.urls]
Homepage = "https://github.com/Blacksujit/Silent-Killer-AI-Agent"
Repository = "https://github.com/Blacksujit/Silent-Killer-AI-Agent"
Issues = "https://github.com/Blacksujit/Silent-Killer-AI-Agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]
